src/client/less/Item.less
@import (less) "variables.less";

.item {
    @height: 50px;
    @halfHeight: 25px;
    @transitionConfig: ease-in-out 0.3s;
    @collapseSize: 15px;

    display: grid;
    border-bottom: 1px solid var(--gray-color, @gray);

    content-visibility: auto;
    contain-intrinsic-size: 345px 52px;

    grid-template-columns: @height 1fr;
    grid-template-rows: @height;
    grid-template-areas: "avatar info" "avatar info";
    transition: opacity @transitionConfig, background-color @transitionConfig;
    cursor: pointer;

    &.withChildren {
        grid-template-columns: @collapseSize @height 1fr;
        grid-template-areas: "collapse avatar info" "collapse avatar info";

        .expandCollapseButton {
            display: flex;
        }

        .subObjects {
            grid-column: auto / span 3;

            .item {
                grid-template-columns: @collapseSize @halfHeight 1fr;
                grid-template-areas: "collapse avatar info" "collapse avatar info";
            }
        }
    }

    &:hover {
        background-color: var(--gray-color, @gray);
        opacity: 1 !important;

        .subObjects {
            .item {
                &:not(.active) {
                    background-color: transparent;
                }
                .subObjects {
                    border-left: 1px dotted @dark;
                }
            }
        }
    }

    &.active {
        background-color: var(--primary-color, @primaryColor);

        &:hover {
            background-color: var(--info-color, @infoColor) !important;
        }

        .subObjects {
            .item {
                &:hover {
                    background-color: var(--info-color, @infoColor)
                }
            }
        }
    }

    &.isSelected {
        color: var(--black-color, @black) !important;

        .name {
            input {
                color: var(--black-color, @black) !important;
            }
        }
    }

    .expandCollapseButton {
        display: none;
        grid-area: collapse;
        font-size: 24px;
        line-height: 24px;
        text-align: center;
        z-index: 2;

        svg {
            bottom: 2px;
            left: -5px;
        }

        &:hover {
            color: @black;
        }
    }

    .progressBar {
        position: absolute;
        bottom: 0;
        grid-column: auto / span 2;
    }

    .avatar {
        grid-area: avatar;
        text-align: center;
        line-height: @height;
        font-size: 24px;

        > div.overlayIcons {
            position: absolute;
            bottom: 0;
            text-align: right;
            font-size: 16px;
            color: var(--primary-color, @warningColor);
            width: calc(@height - 10px);

            > span {
                margin: 2px;
            }
        }

        > div {
            height: 75%;
            width: 75%;
            margin: 6px;
            background-size: contain;
            background-position: center center;
            background-repeat: no-repeat;
        }
    }

    .info {
        grid-area: info;
        overflow: auto;

        > * {
            height: @halfHeight;
            line-height: @halfHeight;
        }

        .name {
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;

            input {
                width: calc(100% - 10px);
                background-color: transparent;
                border: none;
                color: var(--white-color, @white);
                font-weight: bold;
                font-size: 16px;

                &:hover {
                    background-color: var(--white-color, fade(@white, 30%));
                }

                &:focus {
                    user-select: none;
                    outline: none;
                    background-color: var(--white-color, @white);
                    color: var(--black-color, @black);
                }
            }
        }

        .action {
            --button-height: 25px;
            --hover-color: none;
            margin-left: 3px;
            float: right;

            &:hover {
                color: var(--action-hover-color, @black);
            }
        }
    }

    .subObjects {
        grid-column: auto / span 2;
        padding-left: 10px;
        max-height: 0px;
        transition: max-height 0.5s ease-in-out;

        &.opened {
            max-height: 5000px;
        }

        .item {
            grid-template-columns: @halfHeight 1fr;
            grid-template-rows: @halfHeight;
            grid-template-areas: "avatar info" "avatar info";
            border: none;

            .avatar {
                line-height: @halfHeight;
                font-size: 12px;

                > div.overlayIcons {
                    font-size: 8px;
                    width: calc(@halfHeight - 10px);
                }

                > div {
                    margin: 3px;
                }
            }

            .info {
                input {
                    font-weight: normal;
                }
            }

            .subObjects {
                border-left: 1px dotted @gray;
            }
        }
    }
}

